[package]
name = "untitled_rpg_toy"
version = "0.0.1"
edition = "2024"

[dependencies]
rand = "*"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

[dependencies.bevy]
version = "0.16.*"
default-features = false
features = [
    "bevy_log",
    "bevy_state",
    "std",
]
