[package]
name = "untitled_rpg_toy"
version = "0.0.1"
edition = "2024"

[profile.dev]
debug = 0
opt-level = 0 # Switch to 1 for more runtime performance
#overflow-checks = false # Uncomment for better math performance

[features]
dev = [
    "bevy/asset_processor",
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = "abort"
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"

[dependencies]
rand = "*"
rand_chacha = "*"

[dependencies.log]
version = "0.4"
#default-features = false
features = [
    "max_level_debug",
    "release_max_level_warn",
]

[dependencies.bevy]
version = "0.16.*"
#default-features = false
#features = [
#    "bevy_log",
#    "bevy_state",
#]
