[package]
edition = "2024"
name = "untitled_rpg_toy"
version = "0.0.1"

[profile.dev]
debug = 2
opt-level = 0 # Switch to 1 for more runtime performance
#overflow-checks = false # Uncomment for better math performance

[features]
dev = [
    "bevy/asset_processor",
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = 0
opt-level = 3
panic = "abort"
strip = "debuginfo"

[profile.distribution]
inherits = "release"

codegen-units = 1
lto = "thin"
strip = true

[dependencies]
rand = "*"
rand_chacha = "*"

[dependencies.bevy]
version = "0.16.*"
#default-features = false
#features = [
#    "bevy_log",
#    "bevy_state",
#]
